--- a/CNC/Interface/design/index.css
+++ b/CNC/Interface/design/index.css
@@ -13,6 +13,24 @@
     background-color: antiquewhite;
 }
 
+section.content{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin-top: -100%;
+    -webkit-transition: all 0.7s ease;
+    transition: all 0.7s ease;
+}
+
+
+section.content:target{
+    margin-top:0;
+}
+
+header{
+ text-align: center;
+}
+
 #status-overview,thead,tbody,th,tr,td{
     border: 1px solid;
     border-collapse: collapse;
