--- a/CNC/Interface/design/index.css
+++ b/CNC/Interface/design/index.css
@@ -3,12 +3,12 @@
     left: 0;
     right: auto;
     width:150px;
-    background-color: floralwhite;
+    background-color: lightgrey;
 }
 
 #main{
     position: absolute;
-    right: 25px;
+    right: 0px;
     width: 80%;
     background-color: antiquewhite;
 }
@@ -19,7 +19,10 @@ section.content{
     width: 100%;
     height: 100%;
     margin-top: -100%;
+    -moz-transition: all 1s ease;
     -webkit-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    -o-transition: all 1s ease;
     transition: all 1s ease;
 }
 
@@ -32,35 +35,46 @@ header{
  text-align: center;
 }
 
-#status-overview,thead,tbody,th,tr,td{
+#status-overview, thead, tr{
     border: 1px solid;
     border-collapse: collapse;
+    width: 70%;
 }
-thead,th{
+
+thead {
     background-color: lightskyblue;
     cursor: pointer;
-}
-tr:nth-child(even) {
-    background-color: lightblue;
+    text-align: left;
 }
 
-
-tr:nth-child(odd) {
-    background-color: white;
+tbody tr:hover{
+	background: lightskyblue;
+	color: black;
+	-moz-transition: all 0.1s ease;
+    -webkit-transition: all 0.1s ease;
+    -ms-transition: all 0.1s ease;
+    -o-transition: all 0.1s ease;
+    transition: all 0.1s ease;
 }
 
-thead{
-    background-color: cornflowerblue;
-}
+#tr:nth-child(even) {
+#    background-color: lightblue;
+#}
 
-a:active{
-    color:red;
-}
+
+#tr:nth-child(odd) {
+#    background-color: white;
+#}
 
 a:hover{
-    color:blueviolet;
+    color: green;
 }
 
-html{
+a:link {
+	color: darkgrey;
+	#text-decoration: none;
+}
+
+body {
     background: white;
 }
