Formulardaten senden(xhr2 + token) und Validieren programmiert

--- a/CNC/Interface/design/index.css
+++ b/CNC/Interface/design/index.css
@@ -87,3 +87,11 @@ background: url("http://1920x1080hdwallpapers.com/image/201510/games/2335/metal-
 -o-background-size: cover;
 background-size: cover;
 }
+
+label{
+ font-size:14px;
+}
+
+input[type="radio"]{
+ float:left;
+}
