--- a/CNC/Interface/design/index.css
+++ b/CNC/Interface/design/index.css
@@ -1,30 +1,37 @@
+h2 {
+	font-size: 30px;
+	color: #34495e;
+}
+
 #sidemenu{
-    position:fixed;
+    position: fixed;
     left: 0;
-    right: auto;
-    width:150px;
-    background-color: #98ff98;
+    height: 100%;
+    width: 200px;
+    background-color: #34495e;
 }
 
 #main{
     position: absolute;
-    right: 0px;
-    width: 80%;
-    background-color: antiquewhite;
+	right: 0px;
+	left: 200px;
+    width: 100%;
+    margin: 20px 20px 20px 20px;
 }
 
 
 
-.button {
-    background-color: #98ff98;
+button {
+    background-color: #34495e;
     border: none;
-    color: black;
+    color: white;
     padding: 5px 40px;
-    margin: 5px 5px 5px 5px;
+    margin: 5px 0px 5px 0px;
     text-align: center;
     text-decoration: none;
-    display: inline-flex;
-    border-radius: 8px;
+    display: inline-block;
+    height: 100%;
+    #border-radius: 8px;
 }
 
 section.content{
@@ -44,62 +51,69 @@ section.content:target{
     margin-top:0;
 }
 
-header{
- text-align: left;
-}
-
-#status-overview, thead, tr{
+#status-overview, thead, tr {
     border: 1px solid;
-    height: 35px;
+    height: 30px;
     border-collapse: collapse;
-    width: 70%;
+    width: 80%;
+    background-color: #3498db;
 }
 
-thead {
-    background-color: lightskyblue;
+th {
+	color: white;
+    background-color: #34495e;
     cursor: pointer;
     text-align: left;
 }
 
 tbody{
-    background-color: white;
+    #background-color: white;
 }
 
 tbody tr:hover{
-	background: lightskyblue;
-	color: black;
-	-moz-transition: all 0.1s ease;
-    -webkit-transition: all 0.1s ease;
-    -ms-transition: all 0.1s ease;
-    -o-transition: all 0.1s ease;
-    transition: all 0.1s ease;
-}
-
-#tr:nth-child(even) {
-    background-color: lightblue;
+	#background: #16a085;
+	color: white;
+	-moz-transition: all 0.5s ease-in;
+    -webkit-transition: all 0.5s ease-in;
+    -ms-transition: all 0.5s ease-in;
+    -o-transition: all 0.5s ease-in;
+    transition: all 0.5s ease-in;
 }
 
 
-#tr:nth-child(odd) {
-    background-color: white;
+a:link, a:visited {
+	font-size:18px;
+    background-color: #2980b9;
+    color: white;
+    padding: 14px 25px;
+    width: 130px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 0px 0px 0px 20px;
+    right: 0px;
 }
 
-a:hover{
-    color: green;
+a:hover, a:active {
+    color: black;
+    -moz-transition: all 0.5s ease-in;
+    -webkit-transition: all 0.5s ease-in;
+    -ms-transition: all 0.5s ease-in;
+    -o-transition: all 0.5s ease-in;
+    transition: all 0.5s ease-in;
 }
 
-a:link {
-	color: darkgrey;
-	#text-decoration: none;
-}
+
 
 body {
+	background: #2ecc71;
   /*background-image: image("\picture\metal-gear-rising-revengeance-town-ruin-armor-art.jpg") no-repeat center center fixed ;*/
-background: url("http://1920x1080hdwallpapers.com/image/201510/games/2335/metal-gear-rising-revengeance-town-ruin-armor-art.jpg") no-repeat center center fixed ;
--webkit-background-size: cover;
--moz-background-size: cover;
--o-background-size: cover;
-background-size: cover;
+#background: url("http://1920x1080hdwallpapers.com/image/201510/games/2335/metal-gear-rising-revengeance-town-ruin-armor-art.jpg") no-repeat center center fixed ;
+#-webkit-background-size: cover;
+#-moz-background-size: cover;
+#-o-background-size: cover;
+#background-size: cover;
+	margin: 0px 0px 0px 0px;
 }
 
 label{
@@ -109,3 +123,4 @@ label{
 input[type="radio"]{
  float:left;
 }
+
