--- a/CNC/Interface/design/index.css
+++ b/CNC/Interface/design/index.css
@@ -38,7 +38,7 @@ section.content{
     position: absolute;
     width: 100%;
     height: 100%;
-    margin-top: -100%;
+    margin-top: -1000%;
     -moz-transition: all 1s ease;
     -webkit-transition: all 1s ease;
     -ms-transition: all 1s ease;
@@ -57,6 +57,12 @@ section.content:target{
     border-collapse: collapse;
     width: 80%;
     background-color: #3498db;
+}
+
+table{
+    table-layout:fixed;
+    word-wrap:break-word;
+    width: 80%;
 }
 
 th {
