--- a/CNC/Interface/design/index.css
+++ b/CNC/Interface/design/index.css
@@ -13,7 +13,7 @@ h2 {
 
 #main{
     position: absolute;
-	right: 0px;
+	right: 0;
 	left: 200px;
     width: 100%;
     margin: 20px 20px 20px 20px;
@@ -26,7 +26,7 @@ button {
     border: none;
     color: white;
     padding: 5px 40px;
-    margin: 5px 0px 5px 0px;
+    margin: 5px 0 5px 0;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -38,7 +38,7 @@ section.content{
     position: absolute;
     width: 100%;
     height: 100%;
-    margin-top: -100%;
+    margin-top: -1000%;
     -moz-transition: all 1s ease;
     -webkit-transition: all 1s ease;
     -ms-transition: all 1s ease;
@@ -96,8 +96,8 @@ a:link, a:visited {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    margin: 0px 0px 0px 20px;
-    right: 0px;
+    margin: 0 0 0 20px;
+    right: 0;
 }
 
 a:hover, a:active {
@@ -113,13 +113,7 @@ a:hover, a:active {
 
 body {
 	background: #2ecc71;
-  /*background-image: image("\picture\metal-gear-rising-revengeance-town-ruin-armor-art.jpg") no-repeat center center fixed ;*/
-#background: url("http://1920x1080hdwallpapers.com/image/201510/games/2335/metal-gear-rising-revengeance-town-ruin-armor-art.jpg") no-repeat center center fixed ;
-#-webkit-background-size: cover;
-#-moz-background-size: cover;
-#-o-background-size: cover;
-#background-size: cover;
-	margin: 0px 0px 0px 0px;
+	margin: 0 0 0 0;
 }
 
 label{
