--- a/CNC/Interface/design/index.css
+++ b/CNC/Interface/design/index.css
@@ -37,7 +37,7 @@ section.content{
     position: absolute;
     width: 100%;
     height: 100%;
-    margin-top: -1700%;
+    margin-top: -100%;
     -moz-transition: all 1s ease;
     -webkit-transition: all 1s ease;
     -ms-transition: all 1s ease;
@@ -52,21 +52,29 @@ section.content:target{
 
 tr {
     height: 30px;
-    width: 80%;
+    width: 100%;
     background-color: #3498db;
-    page-break-inside:avoid; page-break-after:auto
+    page-break-inside:avoid; page-break-after:auto;
 }
 
 table{
     table-layout:fixed;
     word-wrap:break-word;
-    width: 80%;
-    page-break-inside:auto
-
+    width: 100%;
+    page-break-inside:auto;
 }
+
+#scrolldiv {
+	overflow-y: scroll;
+	overflow-x: hidden;
+	height: 400px;
+	width: 100%;
+}
+
 button:hover{
     color:#2ecc71;
 }
+
 button{
     height: 30px;
 }
